--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Glightman/MERN-Stack-Project#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
   }
 }
