--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
+    "swagger-ui-express": "^4.6.0",
     "twilio": "^3.83.1"
   }
 }
